Fixes for Sonar warnings/errors
and other minor improvements