@@ -21,8 +21,6 @@ import java.util.Set;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import com.google.common.collect.ImmutableSet;
-
 import it.infn.mw.iam.persistence.model.IamGroup;
 import it.infn.mw.iam.persistence.model.IamUserInfo;
 
@@ -30,7 +28,7 @@ import it.infn.mw.iam.persistence.model.IamUserInfo;
 public class AarcClaimValueHelper {
 
   public static final Set<String> ADDITIONAL_CLAIMS =
-      ImmutableSet.of("eduperson_scoped_affiliation", "eduperson_entitlement");
+      Set.of("eduperson_scoped_affiliation", "eduperson_entitlement");
 
   @Value("${iam.host}")
   String iamHost;
